<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyTweets</string>
    <string name="action_setting">Settings</string>
    <string name="login_label">Log In</string>
    <string name="titile_activity_timeline">Home Timeline</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="tweetBody">Tweet Body</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="timestamp">timestamp</string>
    <string name="cancel">Cancel</string>
    <string name="composeTweet">Tweet</string>
    <string name="usernameOther">\@UserName</string>
    <string name="userTagline">This is tagline for user, this has to come from twitter if present, else we should hide this.</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tweet">Enter a tweet here</string>
    <string name="welcome_to_twitter">Welcome to Twitter</string>
</resources>