<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.ComposeDialogFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/composeTweet"
            android:id="@+id/btnTweet"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            />

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/ivProfileImageCompose"
            android:layout_gravity="left"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/btnCancel"
            android:src="@drawable/ic_launcher"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUsernameCompose"
            android:layout_toRightOf="@id/ivProfileImageCompose"
            android:layout_below="@id/btnCancel"
            android:layout_marginTop="25dp"
            android:text="@string/username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTweetBody"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/ivProfileImageCompose"
            android:hint="@string/tweet"/>

    </RelativeLayout>



</FrameLayout>
